// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OrderListItem stories snapshot > Cancelled story renders and matches snapshot 1`] = `
<a
  class="block transition-opacity hover:opacity-95 m-0"
  data-discover="true"
  href="/account/orders/ORD-2024-004"
>
  <div
    class="bg-card text-card-foreground flex flex-col gap-6 py-0 rounded-none border-0 border-order-border shadow-none"
    data-slot="card"
  >
    <div
      class="p-6 space-y-4 border-b border-order-border hover:bg-muted"
      data-slot="card-content"
    >
      <div
        class="flex flex-wrap items-start justify-between border-b border-order-border -mx-6 -mt-6 px-6 pt-3 pb-3 mb-6 bg-muted"
      >
        <div
          class="flex flex-wrap gap-x-8 gap-y-2"
        >
          <div>
            <p
              class="text-muted-foreground text-left text-xs"
            >
              Order Date
            </p>
            <p
              class="text-sm font-medium leading-none text-left text-foreground"
            >
              Sep 8, 2024
            </p>
          </div>
          <div>
            <p
              class="text-muted-foreground text-left text-xs"
            >
              Total
            </p>
            <p
              class="text-sm font-medium leading-none text-left text-foreground"
            >
              $95.92
            </p>
          </div>
          <div>
            <p
              class="text-muted-foreground text-left text-xs"
            >
              Items
            </p>
            <p
              class="text-sm font-medium leading-none text-left text-foreground"
            >
              2
            </p>
          </div>
        </div>
        <span
          class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 text-xs w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden [a&]:hover:bg-primary/90 gap-1 font-semibold border-transparent bg-order-status-cancelled text-order-status-cancelled-foreground"
          data-slot="badge"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-x size-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 6 6 18"
            />
            <path
              d="m6 6 12 12"
            />
          </svg>
          Cancelled
        </span>
      </div>
      <div
        class="flex flex-wrap gap-2"
      >
        <div
          class="relative"
        >
          <div
            class="w-16 h-16 rounded-lg overflow-hidden bg-muted border border-border"
          >
            <img
              alt="Cancelled Item 1"
              class="w-full h-full object-cover"
              loading="lazy"
              src="/images/hero-new-arrivals.webp"
            />
          </div>
          <span
            class="rounded-full border font-medium whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent [a&]:hover:bg-primary/90 absolute -top-1.5 -right-1.5 size-5 p-0 flex items-center justify-center text-xs bg-primary text-primary-foreground"
            data-slot="badge"
          >
            2
          </span>
        </div>
        <div
          class="relative"
        >
          <div
            class="w-16 h-16 rounded-lg overflow-hidden bg-muted border border-border"
          >
            <img
              alt="Cancelled Item 2"
              class="w-full h-full object-cover"
              loading="lazy"
              src="/images/hero-new-arrivals.webp"
            />
          </div>
          <span
            class="rounded-full border font-medium whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent [a&]:hover:bg-primary/90 absolute -top-1.5 -right-1.5 size-5 p-0 flex items-center justify-center text-xs bg-primary text-primary-foreground"
            data-slot="badge"
          >
            3
          </span>
        </div>
      </div>
      <div
        class="flex items-center justify-between pt-2"
      >
        <span
          class="text-sm font-medium leading-none text-left inline-flex items-center gap-1 text-primary hover:underline"
        >
          View Order Details
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-right size-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m9 18 6-6-6-6"
            />
          </svg>
        </span>
        <button
          class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent dark:hover:bg-accent/50 h-8 rounded-md px-3 has-[>svg]:px-2.5 gap-2 text-muted-foreground hover:text-foreground"
          data-size="sm"
          data-slot="button"
          data-variant="ghost"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-file-down size-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z"
            />
            <path
              d="M14 2v4a2 2 0 0 0 2 2h4"
            />
            <path
              d="M12 18v-6"
            />
            <path
              d="m9 15 3 3 3-3"
            />
          </svg>
          Download Receipt
        </button>
      </div>
    </div>
  </div>
</a>
`;

exports[`OrderListItem stories snapshot > Default story renders and matches snapshot 1`] = `
<a
  class="block transition-opacity hover:opacity-95 m-0"
  data-discover="true"
  href="/account/orders/ORD-2024-001"
>
  <div
    class="bg-card text-card-foreground flex flex-col gap-6 py-0 rounded-none border-0 border-order-border shadow-none"
    data-slot="card"
  >
    <div
      class="p-6 space-y-4 border-b border-order-border hover:bg-muted"
      data-slot="card-content"
    >
      <div
        class="flex flex-wrap items-start justify-between border-b border-order-border -mx-6 -mt-6 px-6 pt-3 pb-3 mb-6 bg-muted"
      >
        <div
          class="flex flex-wrap gap-x-8 gap-y-2"
        >
          <div>
            <p
              class="text-muted-foreground text-left text-xs"
            >
              Order Date
            </p>
            <p
              class="text-sm font-medium leading-none text-left text-foreground"
            >
              Sep 14, 2024
            </p>
          </div>
          <div>
            <p
              class="text-muted-foreground text-left text-xs"
            >
              Total
            </p>
            <p
              class="text-sm font-medium leading-none text-left text-foreground"
            >
              $48.38
            </p>
          </div>
          <div>
            <p
              class="text-muted-foreground text-left text-xs"
            >
              Items
            </p>
            <p
              class="text-sm font-medium leading-none text-left text-foreground"
            >
              2
            </p>
          </div>
        </div>
        <span
          class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 text-xs w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden [a&]:hover:bg-primary/90 gap-1 font-semibold border-transparent bg-order-status-new text-order-status-new-foreground"
          data-slot="badge"
        >
          Ready for Pickup
        </span>
      </div>
      <div
        class="flex flex-wrap gap-2"
      >
        <div
          class="relative"
        >
          <div
            class="w-16 h-16 rounded-lg overflow-hidden bg-muted border border-border"
          >
            <img
              alt="Classic White Shirt"
              class="w-full h-full object-cover"
              loading="lazy"
              src="/images/hero-new-arrivals.webp"
            />
          </div>
        </div>
        <div
          class="relative"
        >
          <div
            class="w-16 h-16 rounded-lg overflow-hidden bg-muted border border-border"
          >
            <img
              alt="Blue Dress Pants"
              class="w-full h-full object-cover"
              loading="lazy"
              src="/images/hero-new-arrivals.webp"
            />
          </div>
          <span
            class="rounded-full border font-medium whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent [a&]:hover:bg-primary/90 absolute -top-1.5 -right-1.5 size-5 p-0 flex items-center justify-center text-xs bg-primary text-primary-foreground"
            data-slot="badge"
          >
            2
          </span>
        </div>
      </div>
      <div
        class="flex items-center justify-between pt-2"
      >
        <span
          class="text-sm font-medium leading-none text-left inline-flex items-center gap-1 text-primary hover:underline"
        >
          View Order Details
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-right size-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m9 18 6-6-6-6"
            />
          </svg>
        </span>
        <button
          class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent dark:hover:bg-accent/50 h-8 rounded-md px-3 has-[>svg]:px-2.5 gap-2 text-muted-foreground hover:text-foreground"
          data-size="sm"
          data-slot="button"
          data-variant="ghost"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-file-down size-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z"
            />
            <path
              d="M14 2v4a2 2 0 0 0 2 2h4"
            />
            <path
              d="M12 18v-6"
            />
            <path
              d="m9 15 3 3 3-3"
            />
          </svg>
          Download Receipt
        </button>
      </div>
    </div>
  </div>
</a>
`;

exports[`OrderListItem stories snapshot > Delivered story renders and matches snapshot 1`] = `
<a
  class="block transition-opacity hover:opacity-95 m-0"
  data-discover="true"
  href="/account/orders/ORD-2024-003"
>
  <div
    class="bg-card text-card-foreground flex flex-col gap-6 py-0 rounded-none border-0 border-order-border shadow-none"
    data-slot="card"
  >
    <div
      class="p-6 space-y-4 border-b border-order-border hover:bg-muted"
      data-slot="card-content"
    >
      <div
        class="flex flex-wrap items-start justify-between border-b border-order-border -mx-6 -mt-6 px-6 pt-3 pb-3 mb-6 bg-muted"
      >
        <div
          class="flex flex-wrap gap-x-8 gap-y-2"
        >
          <div>
            <p
              class="text-muted-foreground text-left text-xs"
            >
              Order Date
            </p>
            <p
              class="text-sm font-medium leading-none text-left text-foreground"
            >
              Sep 1, 2024
            </p>
          </div>
          <div>
            <p
              class="text-muted-foreground text-left text-xs"
            >
              Total
            </p>
            <p
              class="text-sm font-medium leading-none text-left text-foreground"
            >
              $405.00
            </p>
          </div>
          <div>
            <p
              class="text-muted-foreground text-left text-xs"
            >
              Items
            </p>
            <p
              class="text-sm font-medium leading-none text-left text-foreground"
            >
              18
            </p>
          </div>
        </div>
        <span
          class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 text-xs w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden [a&]:hover:bg-primary/90 gap-1 font-semibold border-transparent bg-order-status-new text-order-status-new-foreground"
          data-slot="badge"
        >
          Delivered
        </span>
      </div>
      <div
        class="flex flex-wrap gap-2"
      >
        <div
          class="relative"
        >
          <div
            class="w-16 h-16 rounded-lg overflow-hidden bg-muted border border-border"
          >
            <img
              alt="Product 1"
              class="w-full h-full object-cover"
              loading="lazy"
              src="/images/hero-new-arrivals.webp"
            />
          </div>
          <span
            class="rounded-full border font-medium whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent [a&]:hover:bg-primary/90 absolute -top-1.5 -right-1.5 size-5 p-0 flex items-center justify-center text-xs bg-primary text-primary-foreground"
            data-slot="badge"
          >
            2
          </span>
        </div>
        <div
          class="relative"
        >
          <div
            class="w-16 h-16 rounded-lg overflow-hidden bg-muted border border-border"
          >
            <img
              alt="Product 2"
              class="w-full h-full object-cover"
              loading="lazy"
              src="/images/hero-new-arrivals.webp"
            />
          </div>
        </div>
        <div
          class="relative"
        >
          <div
            class="w-16 h-16 rounded-lg overflow-hidden bg-muted border border-border"
          >
            <img
              alt="Product 3"
              class="w-full h-full object-cover"
              loading="lazy"
              src="/images/hero-new-arrivals.webp"
            />
          </div>
        </div>
        <div
          class="relative"
        >
          <div
            class="w-16 h-16 rounded-lg overflow-hidden bg-muted border border-border"
          >
            <img
              alt="Product 4"
              class="w-full h-full object-cover"
              loading="lazy"
              src="/images/hero-new-arrivals.webp"
            />
          </div>
          <span
            class="rounded-full border font-medium whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent [a&]:hover:bg-primary/90 absolute -top-1.5 -right-1.5 size-5 p-0 flex items-center justify-center text-xs bg-primary text-primary-foreground"
            data-slot="badge"
          >
            2
          </span>
        </div>
        <div
          class="relative"
        >
          <div
            class="w-16 h-16 rounded-lg overflow-hidden bg-muted border border-border"
          >
            <img
              alt="Product 5"
              class="w-full h-full object-cover"
              loading="lazy"
              src="/images/hero-new-arrivals.webp"
            />
          </div>
        </div>
        <div
          class="relative"
        >
          <div
            class="w-16 h-16 rounded-lg overflow-hidden bg-muted border border-border"
          >
            <img
              alt="Product 6"
              class="w-full h-full object-cover"
              loading="lazy"
              src="/images/hero-new-arrivals.webp"
            />
          </div>
        </div>
        <div
          class="relative"
        >
          <div
            class="w-16 h-16 rounded-lg overflow-hidden bg-muted border border-border"
          >
            <img
              alt="Product 7"
              class="w-full h-full object-cover"
              loading="lazy"
              src="/images/hero-new-arrivals.webp"
            />
          </div>
          <span
            class="rounded-full border font-medium whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent [a&]:hover:bg-primary/90 absolute -top-1.5 -right-1.5 size-5 p-0 flex items-center justify-center text-xs bg-primary text-primary-foreground"
            data-slot="badge"
          >
            2
          </span>
        </div>
        <div
          class="relative"
        >
          <div
            class="w-16 h-16 rounded-lg overflow-hidden bg-muted border border-border"
          >
            <img
              alt="Product 8"
              class="w-full h-full object-cover"
              loading="lazy"
              src="/images/hero-new-arrivals.webp"
            />
          </div>
        </div>
        <div
          class="relative"
        >
          <div
            class="w-16 h-16 rounded-lg overflow-hidden bg-muted border border-border"
          >
            <img
              alt="Product 9"
              class="w-full h-full object-cover"
              loading="lazy"
              src="/images/hero-new-arrivals.webp"
            />
          </div>
        </div>
        <div
          class="relative"
        >
          <div
            class="w-16 h-16 rounded-lg overflow-hidden bg-muted border border-border"
          >
            <img
              alt="Product 10"
              class="w-full h-full object-cover"
              loading="lazy"
              src="/images/hero-new-arrivals.webp"
            />
          </div>
          <span
            class="rounded-full border font-medium whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent [a&]:hover:bg-primary/90 absolute -top-1.5 -right-1.5 size-5 p-0 flex items-center justify-center text-xs bg-primary text-primary-foreground"
            data-slot="badge"
          >
            2
          </span>
        </div>
        <div
          class="relative"
        >
          <div
            class="w-16 h-16 rounded-lg overflow-hidden bg-muted border border-border"
          >
            <img
              alt="Product 11"
              class="w-full h-full object-cover"
              loading="lazy"
              src="/images/hero-new-arrivals.webp"
            />
          </div>
        </div>
        <div
          class="relative"
        >
          <div
            class="w-16 h-16 rounded-lg overflow-hidden bg-muted border border-border"
          >
            <img
              alt="Product 12"
              class="w-full h-full object-cover"
              loading="lazy"
              src="/images/hero-new-arrivals.webp"
            />
          </div>
        </div>
        <div
          class="w-16 h-16 rounded-lg bg-muted border border-border flex items-center justify-center"
        >
          <span
            class="text-sm font-medium leading-none text-left text-muted-foreground"
          >
            +
            6
          </span>
        </div>
      </div>
      <div
        class="flex items-center justify-between pt-2"
      >
        <span
          class="text-sm font-medium leading-none text-left inline-flex items-center gap-1 text-primary hover:underline"
        >
          View Order Details
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-right size-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m9 18 6-6-6-6"
            />
          </svg>
        </span>
        <button
          class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent dark:hover:bg-accent/50 h-8 rounded-md px-3 has-[>svg]:px-2.5 gap-2 text-muted-foreground hover:text-foreground"
          data-size="sm"
          data-slot="button"
          data-variant="ghost"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-file-down size-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z"
            />
            <path
              d="M14 2v4a2 2 0 0 0 2 2h4"
            />
            <path
              d="M12 18v-6"
            />
            <path
              d="m9 15 3 3 3-3"
            />
          </svg>
          Download Receipt
        </button>
      </div>
    </div>
  </div>
</a>
`;

exports[`OrderListItem stories snapshot > InTransit story renders and matches snapshot 1`] = `
<a
  class="block transition-opacity hover:opacity-95 m-0"
  data-discover="true"
  href="/account/orders/ORD-2024-002"
>
  <div
    class="bg-card text-card-foreground flex flex-col gap-6 py-0 rounded-none border-0 border-order-border shadow-none"
    data-slot="card"
  >
    <div
      class="p-6 space-y-4 border-b border-order-border hover:bg-muted"
      data-slot="card-content"
    >
      <div
        class="flex flex-wrap items-start justify-between border-b border-order-border -mx-6 -mt-6 px-6 pt-3 pb-3 mb-6 bg-muted"
      >
        <div
          class="flex flex-wrap gap-x-8 gap-y-2"
        >
          <div>
            <p
              class="text-muted-foreground text-left text-xs"
            >
              Order Date
            </p>
            <p
              class="text-sm font-medium leading-none text-left text-foreground"
            >
              Sep 12, 2024
            </p>
          </div>
          <div>
            <p
              class="text-muted-foreground text-left text-xs"
            >
              Total
            </p>
            <p
              class="text-sm font-medium leading-none text-left text-foreground"
            >
              $43.00
            </p>
          </div>
          <div>
            <p
              class="text-muted-foreground text-left text-xs"
            >
              Items
            </p>
            <p
              class="text-sm font-medium leading-none text-left text-foreground"
            >
              1
            </p>
          </div>
        </div>
        <span
          class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 text-xs w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden [a&]:hover:bg-primary/90 gap-1 font-semibold border-transparent bg-order-status-new text-order-status-new-foreground"
          data-slot="badge"
        >
          In Transit
        </span>
      </div>
      <div
        class="flex flex-wrap gap-2"
      >
        <div
          class="relative"
        >
          <div
            class="w-16 h-16 rounded-lg overflow-hidden bg-muted border border-border"
          >
            <img
              alt="Summer Dress"
              class="w-full h-full object-cover"
              loading="lazy"
              src="/images/hero-new-arrivals.webp"
            />
          </div>
          <span
            class="rounded-full border font-medium whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent [a&]:hover:bg-primary/90 absolute -top-1.5 -right-1.5 size-5 p-0 flex items-center justify-center text-xs bg-primary text-primary-foreground"
            data-slot="badge"
          >
            2
          </span>
        </div>
      </div>
      <div
        class="flex items-center justify-between pt-2"
      >
        <span
          class="text-sm font-medium leading-none text-left inline-flex items-center gap-1 text-primary hover:underline"
        >
          View Order Details
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-right size-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m9 18 6-6-6-6"
            />
          </svg>
        </span>
        <button
          class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent dark:hover:bg-accent/50 h-8 rounded-md px-3 has-[>svg]:px-2.5 gap-2 text-muted-foreground hover:text-foreground"
          data-size="sm"
          data-slot="button"
          data-variant="ghost"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-file-down size-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z"
            />
            <path
              d="M14 2v4a2 2 0 0 0 2 2h4"
            />
            <path
              d="M12 18v-6"
            />
            <path
              d="m9 15 3 3 3-3"
            />
          </svg>
          Download Receipt
        </button>
      </div>
    </div>
  </div>
</a>
`;

exports[`OrderListItem stories snapshot > OrdersList story renders and matches snapshot 1`] = `
<div
  class="space-y-4"
>
  <a
    class="block transition-opacity hover:opacity-95 m-0"
    data-discover="true"
    href="/account/orders/ORD-2024-001"
  >
    <div
      class="bg-card text-card-foreground flex flex-col gap-6 py-0 rounded-none border-0 border-order-border shadow-none"
      data-slot="card"
    >
      <div
        class="p-6 space-y-4 border-b border-order-border hover:bg-muted"
        data-slot="card-content"
      >
        <div
          class="flex flex-wrap items-start justify-between border-b border-order-border -mx-6 -mt-6 px-6 pt-3 pb-3 mb-6 bg-muted"
        >
          <div
            class="flex flex-wrap gap-x-8 gap-y-2"
          >
            <div>
              <p
                class="text-muted-foreground text-left text-xs"
              >
                Order Date
              </p>
              <p
                class="text-sm font-medium leading-none text-left text-foreground"
              >
                Sep 14, 2024
              </p>
            </div>
            <div>
              <p
                class="text-muted-foreground text-left text-xs"
              >
                Total
              </p>
              <p
                class="text-sm font-medium leading-none text-left text-foreground"
              >
                $48.38
              </p>
            </div>
            <div>
              <p
                class="text-muted-foreground text-left text-xs"
              >
                Items
              </p>
              <p
                class="text-sm font-medium leading-none text-left text-foreground"
              >
                2
              </p>
            </div>
          </div>
          <span
            class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 text-xs w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden [a&]:hover:bg-primary/90 gap-1 font-semibold border-transparent bg-order-status-new text-order-status-new-foreground"
            data-slot="badge"
          >
            Ready for Pickup
          </span>
        </div>
        <div
          class="flex flex-wrap gap-2"
        >
          <div
            class="relative"
          >
            <div
              class="w-16 h-16 rounded-lg overflow-hidden bg-muted border border-border"
            >
              <img
                alt="Classic White Shirt"
                class="w-full h-full object-cover"
                loading="lazy"
                src="/images/hero-new-arrivals.webp"
              />
            </div>
          </div>
          <div
            class="relative"
          >
            <div
              class="w-16 h-16 rounded-lg overflow-hidden bg-muted border border-border"
            >
              <img
                alt="Blue Dress Pants"
                class="w-full h-full object-cover"
                loading="lazy"
                src="/images/hero-new-arrivals.webp"
              />
            </div>
            <span
              class="rounded-full border font-medium whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent [a&]:hover:bg-primary/90 absolute -top-1.5 -right-1.5 size-5 p-0 flex items-center justify-center text-xs bg-primary text-primary-foreground"
              data-slot="badge"
            >
              2
            </span>
          </div>
        </div>
        <div
          class="text-card-foreground flex flex-col gap-6 rounded-xl border shadow-sm bg-order-pickup border-order-pickup-border p-0"
          data-slot="card"
        >
          <div
            class="p-4 space-y-2"
            data-slot="card-content"
          >
            <div
              class="flex items-center gap-2"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-map-pin size-4 text-muted-foreground"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
                />
                <circle
                  cx="12"
                  cy="10"
                  r="3"
                />
              </svg>
              <span
                class="text-sm leading-none text-left font-semibold text-foreground"
              >
                Pickup Location
              </span>
            </div>
            <div
              class="space-y-1 pl-6"
            >
              <div>
                <p
                  class="text-muted-foreground text-left text-xs"
                >
                  Location
                </p>
                <p
                  class="text-sm font-medium leading-none text-left text-foreground"
                >
                  Salesforce Foundations San Francisco
                </p>
              </div>
              <div>
                <p
                  class="text-muted-foreground text-left text-xs"
                >
                  Address
                </p>
                <p
                  class="text-sm leading-none text-left text-foreground font-normal"
                >
                  415 Mission Street, San Francisco, CA 94105
                </p>
              </div>
              <div>
                <p
                  class="text-muted-foreground text-left text-xs"
                >
                  Pickup Window
                </p>
                <p
                  class="text-sm leading-none text-left text-foreground font-normal"
                >
                  Sep 16-20, 2024
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex items-center justify-between pt-2"
        >
          <span
            class="text-sm font-medium leading-none text-left inline-flex items-center gap-1 text-primary hover:underline"
          >
            View Order Details
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-right size-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m9 18 6-6-6-6"
              />
            </svg>
          </span>
          <button
            class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent dark:hover:bg-accent/50 h-8 rounded-md px-3 has-[>svg]:px-2.5 gap-2 text-muted-foreground hover:text-foreground"
            data-size="sm"
            data-slot="button"
            data-variant="ghost"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-file-down size-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z"
              />
              <path
                d="M14 2v4a2 2 0 0 0 2 2h4"
              />
              <path
                d="M12 18v-6"
              />
              <path
                d="m9 15 3 3 3-3"
              />
            </svg>
            Download Receipt
          </button>
        </div>
      </div>
    </div>
  </a>
  <a
    class="block transition-opacity hover:opacity-95 m-0"
    data-discover="true"
    href="/account/orders/ORD-2024-002"
  >
    <div
      class="bg-card text-card-foreground flex flex-col gap-6 py-0 rounded-none border-0 border-order-border shadow-none"
      data-slot="card"
    >
      <div
        class="p-6 space-y-4 border-b border-order-border hover:bg-muted"
        data-slot="card-content"
      >
        <div
          class="flex flex-wrap items-start justify-between border-b border-order-border -mx-6 -mt-6 px-6 pt-3 pb-3 mb-6 bg-muted"
        >
          <div
            class="flex flex-wrap gap-x-8 gap-y-2"
          >
            <div>
              <p
                class="text-muted-foreground text-left text-xs"
              >
                Order Date
              </p>
              <p
                class="text-sm font-medium leading-none text-left text-foreground"
              >
                Sep 12, 2024
              </p>
            </div>
            <div>
              <p
                class="text-muted-foreground text-left text-xs"
              >
                Total
              </p>
              <p
                class="text-sm font-medium leading-none text-left text-foreground"
              >
                $43.00
              </p>
            </div>
            <div>
              <p
                class="text-muted-foreground text-left text-xs"
              >
                Items
              </p>
              <p
                class="text-sm font-medium leading-none text-left text-foreground"
              >
                1
              </p>
            </div>
          </div>
          <span
            class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 text-xs w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden [a&]:hover:bg-primary/90 gap-1 font-semibold border-transparent bg-order-status-new text-order-status-new-foreground"
            data-slot="badge"
          >
            In Transit
          </span>
        </div>
        <div
          class="flex flex-wrap gap-2"
        >
          <div
            class="relative"
          >
            <div
              class="w-16 h-16 rounded-lg overflow-hidden bg-muted border border-border"
            >
              <img
                alt="Summer Dress"
                class="w-full h-full object-cover"
                loading="lazy"
                src="/images/hero-new-arrivals.webp"
              />
            </div>
            <span
              class="rounded-full border font-medium whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent [a&]:hover:bg-primary/90 absolute -top-1.5 -right-1.5 size-5 p-0 flex items-center justify-center text-xs bg-primary text-primary-foreground"
              data-slot="badge"
            >
              2
            </span>
          </div>
        </div>
        <div
          class="flex items-center justify-between pt-2"
        >
          <span
            class="text-sm font-medium leading-none text-left inline-flex items-center gap-1 text-primary hover:underline"
          >
            View Order Details
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-right size-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m9 18 6-6-6-6"
              />
            </svg>
          </span>
          <button
            class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent dark:hover:bg-accent/50 h-8 rounded-md px-3 has-[>svg]:px-2.5 gap-2 text-muted-foreground hover:text-foreground"
            data-size="sm"
            data-slot="button"
            data-variant="ghost"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-file-down size-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z"
              />
              <path
                d="M14 2v4a2 2 0 0 0 2 2h4"
              />
              <path
                d="M12 18v-6"
              />
              <path
                d="m9 15 3 3 3-3"
              />
            </svg>
            Download Receipt
          </button>
        </div>
      </div>
    </div>
  </a>
  <a
    class="block transition-opacity hover:opacity-95 m-0"
    data-discover="true"
    href="/account/orders/ORD-2024-003"
  >
    <div
      class="bg-card text-card-foreground flex flex-col gap-6 py-0 rounded-none border-0 border-order-border shadow-none"
      data-slot="card"
    >
      <div
        class="p-6 space-y-4 border-b border-order-border hover:bg-muted"
        data-slot="card-content"
      >
        <div
          class="flex flex-wrap items-start justify-between border-b border-order-border -mx-6 -mt-6 px-6 pt-3 pb-3 mb-6 bg-muted"
        >
          <div
            class="flex flex-wrap gap-x-8 gap-y-2"
          >
            <div>
              <p
                class="text-muted-foreground text-left text-xs"
              >
                Order Date
              </p>
              <p
                class="text-sm font-medium leading-none text-left text-foreground"
              >
                Sep 1, 2024
              </p>
            </div>
            <div>
              <p
                class="text-muted-foreground text-left text-xs"
              >
                Total
              </p>
              <p
                class="text-sm font-medium leading-none text-left text-foreground"
              >
                $405.00
              </p>
            </div>
            <div>
              <p
                class="text-muted-foreground text-left text-xs"
              >
                Items
              </p>
              <p
                class="text-sm font-medium leading-none text-left text-foreground"
              >
                18
              </p>
            </div>
          </div>
          <span
            class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 text-xs w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden [a&]:hover:bg-primary/90 gap-1 font-semibold border-transparent bg-order-status-new text-order-status-new-foreground"
            data-slot="badge"
          >
            Delivered
          </span>
        </div>
        <div
          class="flex flex-wrap gap-2"
        >
          <div
            class="relative"
          >
            <div
              class="w-16 h-16 rounded-lg overflow-hidden bg-muted border border-border"
            >
              <img
                alt="Product 1"
                class="w-full h-full object-cover"
                loading="lazy"
                src="/images/hero-new-arrivals.webp"
              />
            </div>
            <span
              class="rounded-full border font-medium whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent [a&]:hover:bg-primary/90 absolute -top-1.5 -right-1.5 size-5 p-0 flex items-center justify-center text-xs bg-primary text-primary-foreground"
              data-slot="badge"
            >
              2
            </span>
          </div>
          <div
            class="relative"
          >
            <div
              class="w-16 h-16 rounded-lg overflow-hidden bg-muted border border-border"
            >
              <img
                alt="Product 2"
                class="w-full h-full object-cover"
                loading="lazy"
                src="/images/hero-new-arrivals.webp"
              />
            </div>
          </div>
          <div
            class="relative"
          >
            <div
              class="w-16 h-16 rounded-lg overflow-hidden bg-muted border border-border"
            >
              <img
                alt="Product 3"
                class="w-full h-full object-cover"
                loading="lazy"
                src="/images/hero-new-arrivals.webp"
              />
            </div>
          </div>
          <div
            class="relative"
          >
            <div
              class="w-16 h-16 rounded-lg overflow-hidden bg-muted border border-border"
            >
              <img
                alt="Product 4"
                class="w-full h-full object-cover"
                loading="lazy"
                src="/images/hero-new-arrivals.webp"
              />
            </div>
            <span
              class="rounded-full border font-medium whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent [a&]:hover:bg-primary/90 absolute -top-1.5 -right-1.5 size-5 p-0 flex items-center justify-center text-xs bg-primary text-primary-foreground"
              data-slot="badge"
            >
              2
            </span>
          </div>
          <div
            class="relative"
          >
            <div
              class="w-16 h-16 rounded-lg overflow-hidden bg-muted border border-border"
            >
              <img
                alt="Product 5"
                class="w-full h-full object-cover"
                loading="lazy"
                src="/images/hero-new-arrivals.webp"
              />
            </div>
          </div>
          <div
            class="relative"
          >
            <div
              class="w-16 h-16 rounded-lg overflow-hidden bg-muted border border-border"
            >
              <img
                alt="Product 6"
                class="w-full h-full object-cover"
                loading="lazy"
                src="/images/hero-new-arrivals.webp"
              />
            </div>
          </div>
          <div
            class="relative"
          >
            <div
              class="w-16 h-16 rounded-lg overflow-hidden bg-muted border border-border"
            >
              <img
                alt="Product 7"
                class="w-full h-full object-cover"
                loading="lazy"
                src="/images/hero-new-arrivals.webp"
              />
            </div>
            <span
              class="rounded-full border font-medium whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent [a&]:hover:bg-primary/90 absolute -top-1.5 -right-1.5 size-5 p-0 flex items-center justify-center text-xs bg-primary text-primary-foreground"
              data-slot="badge"
            >
              2
            </span>
          </div>
          <div
            class="relative"
          >
            <div
              class="w-16 h-16 rounded-lg overflow-hidden bg-muted border border-border"
            >
              <img
                alt="Product 8"
                class="w-full h-full object-cover"
                loading="lazy"
                src="/images/hero-new-arrivals.webp"
              />
            </div>
          </div>
          <div
            class="relative"
          >
            <div
              class="w-16 h-16 rounded-lg overflow-hidden bg-muted border border-border"
            >
              <img
                alt="Product 9"
                class="w-full h-full object-cover"
                loading="lazy"
                src="/images/hero-new-arrivals.webp"
              />
            </div>
          </div>
          <div
            class="relative"
          >
            <div
              class="w-16 h-16 rounded-lg overflow-hidden bg-muted border border-border"
            >
              <img
                alt="Product 10"
                class="w-full h-full object-cover"
                loading="lazy"
                src="/images/hero-new-arrivals.webp"
              />
            </div>
            <span
              class="rounded-full border font-medium whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent [a&]:hover:bg-primary/90 absolute -top-1.5 -right-1.5 size-5 p-0 flex items-center justify-center text-xs bg-primary text-primary-foreground"
              data-slot="badge"
            >
              2
            </span>
          </div>
          <div
            class="relative"
          >
            <div
              class="w-16 h-16 rounded-lg overflow-hidden bg-muted border border-border"
            >
              <img
                alt="Product 11"
                class="w-full h-full object-cover"
                loading="lazy"
                src="/images/hero-new-arrivals.webp"
              />
            </div>
          </div>
          <div
            class="relative"
          >
            <div
              class="w-16 h-16 rounded-lg overflow-hidden bg-muted border border-border"
            >
              <img
                alt="Product 12"
                class="w-full h-full object-cover"
                loading="lazy"
                src="/images/hero-new-arrivals.webp"
              />
            </div>
          </div>
          <div
            class="w-16 h-16 rounded-lg bg-muted border border-border flex items-center justify-center"
          >
            <span
              class="text-sm font-medium leading-none text-left text-muted-foreground"
            >
              +
              6
            </span>
          </div>
        </div>
        <div
          class="flex items-center justify-between pt-2"
        >
          <span
            class="text-sm font-medium leading-none text-left inline-flex items-center gap-1 text-primary hover:underline"
          >
            View Order Details
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-right size-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m9 18 6-6-6-6"
              />
            </svg>
          </span>
          <button
            class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent dark:hover:bg-accent/50 h-8 rounded-md px-3 has-[>svg]:px-2.5 gap-2 text-muted-foreground hover:text-foreground"
            data-size="sm"
            data-slot="button"
            data-variant="ghost"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-file-down size-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z"
              />
              <path
                d="M14 2v4a2 2 0 0 0 2 2h4"
              />
              <path
                d="M12 18v-6"
              />
              <path
                d="m9 15 3 3 3-3"
              />
            </svg>
            Download Receipt
          </button>
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`OrderListItem stories snapshot > PartiallyDelivered story renders and matches snapshot 1`] = `
<a
  class="block transition-opacity hover:opacity-95 m-0"
  data-discover="true"
  href="/account/orders/ORD-2024-005"
>
  <div
    class="bg-card text-card-foreground flex flex-col gap-6 py-0 rounded-none border-0 border-order-border shadow-none"
    data-slot="card"
  >
    <div
      class="p-6 space-y-4 border-b border-order-border hover:bg-muted"
      data-slot="card-content"
    >
      <div
        class="flex flex-wrap items-start justify-between border-b border-order-border -mx-6 -mt-6 px-6 pt-3 pb-3 mb-6 bg-muted"
      >
        <div
          class="flex flex-wrap gap-x-8 gap-y-2"
        >
          <div>
            <p
              class="text-muted-foreground text-left text-xs"
            >
              Order Date
            </p>
            <p
              class="text-sm font-medium leading-none text-left text-foreground"
            >
              Sep 10, 2024
            </p>
          </div>
          <div>
            <p
              class="text-muted-foreground text-left text-xs"
            >
              Total
            </p>
            <p
              class="text-sm font-medium leading-none text-left text-foreground"
            >
              $54.00
            </p>
          </div>
          <div>
            <p
              class="text-muted-foreground text-left text-xs"
            >
              Items
            </p>
            <p
              class="text-sm font-medium leading-none text-left text-foreground"
            >
              4
            </p>
          </div>
        </div>
        <span
          class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 text-xs w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden [a&]:hover:bg-primary/90 gap-1 font-semibold border-transparent bg-order-status-new text-order-status-new-foreground"
          data-slot="badge"
        >
          Partially Delivered
        </span>
      </div>
      <div
        class="flex flex-wrap gap-2"
      >
        <div
          class="relative"
        >
          <div
            class="w-16 h-16 rounded-lg overflow-hidden bg-muted border border-border"
          >
            <img
              alt="Partially Delivered Item 1"
              class="w-full h-full object-cover"
              loading="lazy"
              src="/images/hero-new-arrivals.webp"
            />
          </div>
          <span
            class="rounded-full border font-medium whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent [a&]:hover:bg-primary/90 absolute -top-1.5 -right-1.5 size-5 p-0 flex items-center justify-center text-xs bg-primary text-primary-foreground"
            data-slot="badge"
          >
            3
          </span>
        </div>
        <div
          class="relative"
        >
          <div
            class="w-16 h-16 rounded-lg overflow-hidden bg-muted border border-border"
          >
            <img
              alt="Partially Delivered Item 2"
              class="w-full h-full object-cover"
              loading="lazy"
              src="/images/hero-new-arrivals.webp"
            />
          </div>
          <span
            class="rounded-full border font-medium whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent [a&]:hover:bg-primary/90 absolute -top-1.5 -right-1.5 size-5 p-0 flex items-center justify-center text-xs bg-primary text-primary-foreground"
            data-slot="badge"
          >
            2
          </span>
        </div>
        <div
          class="relative"
        >
          <div
            class="w-16 h-16 rounded-lg overflow-hidden bg-muted border border-border"
          >
            <img
              alt="Partially Delivered Item 3"
              class="w-full h-full object-cover"
              loading="lazy"
              src="/images/hero-new-arrivals.webp"
            />
          </div>
          <span
            class="rounded-full border font-medium whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent [a&]:hover:bg-primary/90 absolute -top-1.5 -right-1.5 size-5 p-0 flex items-center justify-center text-xs bg-primary text-primary-foreground"
            data-slot="badge"
          >
            4
          </span>
        </div>
        <div
          class="relative"
        >
          <div
            class="w-16 h-16 rounded-lg overflow-hidden bg-muted border border-border"
          >
            <img
              alt="Partially Delivered Item 4"
              class="w-full h-full object-cover"
              loading="lazy"
              src="/images/hero-new-arrivals.webp"
            />
          </div>
        </div>
      </div>
      <div
        class="flex items-center justify-between pt-2"
      >
        <span
          class="text-sm font-medium leading-none text-left inline-flex items-center gap-1 text-primary hover:underline"
        >
          View Order Details
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-right size-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m9 18 6-6-6-6"
            />
          </svg>
        </span>
        <button
          class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent dark:hover:bg-accent/50 h-8 rounded-md px-3 has-[>svg]:px-2.5 gap-2 text-muted-foreground hover:text-foreground"
          data-size="sm"
          data-slot="button"
          data-variant="ghost"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-file-down size-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z"
            />
            <path
              d="M14 2v4a2 2 0 0 0 2 2h4"
            />
            <path
              d="M12 18v-6"
            />
            <path
              d="m9 15 3 3 3-3"
            />
          </svg>
          Download Receipt
        </button>
      </div>
    </div>
  </div>
</a>
`;

exports[`OrderListItem stories snapshot > WithPickupLocation story renders and matches snapshot 1`] = `
<a
  class="block transition-opacity hover:opacity-95 m-0"
  data-discover="true"
  href="/account/orders/ORD-2024-001"
>
  <div
    class="bg-card text-card-foreground flex flex-col gap-6 py-0 rounded-none border-0 border-order-border shadow-none"
    data-slot="card"
  >
    <div
      class="p-6 space-y-4 border-b border-order-border hover:bg-muted"
      data-slot="card-content"
    >
      <div
        class="flex flex-wrap items-start justify-between border-b border-order-border -mx-6 -mt-6 px-6 pt-3 pb-3 mb-6 bg-muted"
      >
        <div
          class="flex flex-wrap gap-x-8 gap-y-2"
        >
          <div>
            <p
              class="text-muted-foreground text-left text-xs"
            >
              Order Date
            </p>
            <p
              class="text-sm font-medium leading-none text-left text-foreground"
            >
              Sep 14, 2024
            </p>
          </div>
          <div>
            <p
              class="text-muted-foreground text-left text-xs"
            >
              Total
            </p>
            <p
              class="text-sm font-medium leading-none text-left text-foreground"
            >
              $48.38
            </p>
          </div>
          <div>
            <p
              class="text-muted-foreground text-left text-xs"
            >
              Items
            </p>
            <p
              class="text-sm font-medium leading-none text-left text-foreground"
            >
              2
            </p>
          </div>
        </div>
        <span
          class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 text-xs w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden [a&]:hover:bg-primary/90 gap-1 font-semibold border-transparent bg-order-status-new text-order-status-new-foreground"
          data-slot="badge"
        >
          Ready for Pickup
        </span>
      </div>
      <div
        class="flex flex-wrap gap-2"
      >
        <div
          class="relative"
        >
          <div
            class="w-16 h-16 rounded-lg overflow-hidden bg-muted border border-border"
          >
            <img
              alt="Classic White Shirt"
              class="w-full h-full object-cover"
              loading="lazy"
              src="/images/hero-new-arrivals.webp"
            />
          </div>
        </div>
        <div
          class="relative"
        >
          <div
            class="w-16 h-16 rounded-lg overflow-hidden bg-muted border border-border"
          >
            <img
              alt="Blue Dress Pants"
              class="w-full h-full object-cover"
              loading="lazy"
              src="/images/hero-new-arrivals.webp"
            />
          </div>
          <span
            class="rounded-full border font-medium whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent [a&]:hover:bg-primary/90 absolute -top-1.5 -right-1.5 size-5 p-0 flex items-center justify-center text-xs bg-primary text-primary-foreground"
            data-slot="badge"
          >
            2
          </span>
        </div>
      </div>
      <div
        class="text-card-foreground flex flex-col gap-6 rounded-xl border shadow-sm bg-order-pickup border-order-pickup-border p-0"
        data-slot="card"
      >
        <div
          class="p-4 space-y-2"
          data-slot="card-content"
        >
          <div
            class="flex items-center gap-2"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-map-pin size-4 text-muted-foreground"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
              />
              <circle
                cx="12"
                cy="10"
                r="3"
              />
            </svg>
            <span
              class="text-sm leading-none text-left font-semibold text-foreground"
            >
              Pickup Location
            </span>
          </div>
          <div
            class="space-y-1 pl-6"
          >
            <div>
              <p
                class="text-muted-foreground text-left text-xs"
              >
                Location
              </p>
              <p
                class="text-sm font-medium leading-none text-left text-foreground"
              >
                Salesforce Foundations San Francisco
              </p>
            </div>
            <div>
              <p
                class="text-muted-foreground text-left text-xs"
              >
                Address
              </p>
              <p
                class="text-sm leading-none text-left text-foreground font-normal"
              >
                415 Mission Street, San Francisco, CA 94105
              </p>
            </div>
            <div>
              <p
                class="text-muted-foreground text-left text-xs"
              >
                Pickup Window
              </p>
              <p
                class="text-sm leading-none text-left text-foreground font-normal"
              >
                Sep 16-20, 2024
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex items-center justify-between pt-2"
      >
        <span
          class="text-sm font-medium leading-none text-left inline-flex items-center gap-1 text-primary hover:underline"
        >
          View Order Details
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-right size-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m9 18 6-6-6-6"
            />
          </svg>
        </span>
        <button
          class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent dark:hover:bg-accent/50 h-8 rounded-md px-3 has-[>svg]:px-2.5 gap-2 text-muted-foreground hover:text-foreground"
          data-size="sm"
          data-slot="button"
          data-variant="ghost"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-file-down size-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z"
            />
            <path
              d="M14 2v4a2 2 0 0 0 2 2h4"
            />
            <path
              d="M12 18v-6"
            />
            <path
              d="m9 15 3 3 3-3"
            />
          </svg>
          Download Receipt
        </button>
      </div>
    </div>
  </div>
</a>
`;

exports[`OrderListItem stories snapshot > WithoutImages story renders and matches snapshot 1`] = `
<a
  class="block transition-opacity hover:opacity-95 m-0"
  data-discover="true"
  href="/account/orders/ORD-2024-006"
>
  <div
    class="bg-card text-card-foreground flex flex-col gap-6 py-0 rounded-none border-0 border-order-border shadow-none"
    data-slot="card"
  >
    <div
      class="p-6 space-y-4 border-b border-order-border hover:bg-muted"
      data-slot="card-content"
    >
      <div
        class="flex flex-wrap items-start justify-between border-b border-order-border -mx-6 -mt-6 px-6 pt-3 pb-3 mb-6 bg-muted"
      >
        <div
          class="flex flex-wrap gap-x-8 gap-y-2"
        >
          <div>
            <p
              class="text-muted-foreground text-left text-xs"
            >
              Order Date
            </p>
            <p
              class="text-sm font-medium leading-none text-left text-foreground"
            >
              Sep 14, 2024
            </p>
          </div>
          <div>
            <p
              class="text-muted-foreground text-left text-xs"
            >
              Total
            </p>
            <p
              class="text-sm font-medium leading-none text-left text-foreground"
            >
              $48.38
            </p>
          </div>
          <div>
            <p
              class="text-muted-foreground text-left text-xs"
            >
              Items
            </p>
            <p
              class="text-sm font-medium leading-none text-left text-foreground"
            >
              2
            </p>
          </div>
        </div>
        <span
          class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 text-xs w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden [a&]:hover:bg-primary/90 gap-1 font-semibold border-transparent bg-order-status-new text-order-status-new-foreground"
          data-slot="badge"
        >
          Ready for Pickup
        </span>
      </div>
      <div
        class="flex flex-wrap gap-2"
      >
        <div
          class="relative"
        >
          <div
            class="w-16 h-16 rounded-lg overflow-hidden bg-muted border border-border"
          />
        </div>
        <div
          class="relative"
        >
          <div
            class="w-16 h-16 rounded-lg overflow-hidden bg-muted border border-border"
          />
          <span
            class="rounded-full border font-medium whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent [a&]:hover:bg-primary/90 absolute -top-1.5 -right-1.5 size-5 p-0 flex items-center justify-center text-xs bg-primary text-primary-foreground"
            data-slot="badge"
          >
            2
          </span>
        </div>
      </div>
      <div
        class="flex items-center justify-between pt-2"
      >
        <span
          class="text-sm font-medium leading-none text-left inline-flex items-center gap-1 text-primary hover:underline"
        >
          View Order Details
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-right size-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m9 18 6-6-6-6"
            />
          </svg>
        </span>
        <button
          class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent dark:hover:bg-accent/50 h-8 rounded-md px-3 has-[>svg]:px-2.5 gap-2 text-muted-foreground hover:text-foreground"
          data-size="sm"
          data-slot="button"
          data-variant="ghost"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-file-down size-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z"
            />
            <path
              d="M14 2v4a2 2 0 0 0 2 2h4"
            />
            <path
              d="M12 18v-6"
            />
            <path
              d="m9 15 3 3 3-3"
            />
          </svg>
          Download Receipt
        </button>
      </div>
    </div>
  </div>
</a>
`;
